--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,18 @@ authors = ["Alex Kyllo <alex.kyllo@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 scipy = "^1.5.2"
-pandas = "^1.1.1"
 numpy = "^1.19.1"
+scikit-learn = "^0.23.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 black = "^19.10b0"
 pylint = "^2.6.0"
+wrapt = "^1.12.1"
 Sphinx = "^3.2.1"
 Sphinx-rtd-theme = "^0.5.0"
+jupyter = "^1.0.0"
+matplotlib = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
