--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ Sphinx = "^3.2.1"
 Sphinx-rtd-theme = "^0.5.0"
 jupyter = "^1.0.0"
 matplotlib = "^3.3.1"
+pandas = "^1.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
